--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@oclif/dev-cli": "git+https://github.com/pviti/dev-cli.git",
     "@oclif/test": "^1.2.8",
     "@types/chai": "^4.2.21",
+    "@types/jsonwebtoken": "^8.5.5",
     "@types/mocha": "^5.2.7",
     "@types/node": "^10.17.60",
     "@types/update-notifier": "^5.0.0",
@@ -73,6 +74,7 @@
     "@oclif/config": "^1.17.0",
     "chalk": "^2.4.2",
     "cli-ux": "^5.6.3",
+    "jsonwebtoken": "^8.5.1",
     "tslib": "^1.14.1",
     "update-notifier": "^5.1.0"
   },
