--- a/package.json
+++ b/package.json
@@ -1,16 +1,12 @@
 {
   "name": "@commercelayer/cli-plugin-checkout",
   "description": "Commerce Layer CLI Checkout plugin",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "author": "Pierluigi Viti <pierluigi@commercelayer.io>",
-  "bin": {
-    "cl-checkout": "./bin/run",
-    "cl-chk": "./bin/run",
-    "clk": "./bin/run"
-  },
   "bugs": "https://github.com/commercelayer/commercelayer-cli-plugin-checkout/issues",
   "devDependencies": {
     "@oclif/dev-cli": "git+https://github.com/pviti/dev-cli.git",
+    "@oclif/plugin-help": "^3.2.2",
     "@oclif/test": "^1.2.8",
     "@types/chai": "^4.2.21",
     "@types/jsonwebtoken": "^8.5.5",
@@ -32,7 +28,6 @@
     "node": ">=8.0.0"
   },
   "files": [
-    "/bin",
     "/lib",
     "/npm-shrinkwrap.json",
     "/oclif.manifest.json"
@@ -49,6 +44,9 @@
   "oclif": {
     "commands": "./lib/commands",
     "bin": "cl-checkout",
+    "devPlugins": [
+      "@oclif/plugin-help"
+    ],
     "plugins": [],
     "topics": {
       "checkout": {
