--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@commercelayer/cli-plugin-checkout",
   "description": "Commerce Layer CLI Checkout plugin",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "author": "Pierluigi Viti <pierluigi@commercelayer.io>",
   "bin": {
     "cl-checkout": "./bin/run",
@@ -58,7 +58,8 @@
         "description": "Generate checkout URLs",
         "hidden": true
       }
-    }
+    },
+    "repositoryPrefix": "<%- repo %>/blob/main/<%- commandPath %>"
   },
   "repository": "commercelayer/commercelayer-cli-plugin-checkout",
   "scripts": {
