--- a/package.json
+++ b/package.json
@@ -1,12 +1,8 @@
 {
   "name": "@commercelayer/cli-plugin-checkout",
   "description": "Commerce Layer CLI Checkout plugin",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "author": "Pierluigi Viti <pierluigi@commercelayer.io>",
-  "bin": {
-    "cl-checkout": "./bin/run",
-    "clc": "./bin/run"
-  },
   "bugs": "https://github.com/commercelayer/commercelayer-cli-plugin-checkout/issues",
   "devDependencies": {
     "@oclif/dev-cli": "git+https://github.com/pviti/dev-cli.git",
@@ -48,7 +44,7 @@
   "main": "lib/index.js",
   "oclif": {
     "commands": "./lib/commands",
-    "bin": "cl-checkout",
+    "bin": "commercelayer",
     "devPlugins": [
       "@oclif/plugin-help"
     ],
