--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "@commercelayer/cli-plugin-checkout",
   "description": "Commerce Layer CLI Checkout plugin",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "author": "Pierluigi Viti <pierluigi@commercelayer.io>",
+  "bin": {
+    "cl-checkout": "./bin/run"
+  },
   "bugs": "https://github.com/commercelayer/commercelayer-cli-plugin-checkout/issues",
   "devDependencies": {
     "@oclif/dev-cli": "git+https://github.com/pviti/dev-cli.git",
@@ -44,7 +47,7 @@
   "main": "lib/index.js",
   "oclif": {
     "commands": "./lib/commands",
-    "bin": "commercelayer",
+    "bin": "cl-checkout",
     "devPlugins": [
       "@oclif/plugin-help"
     ],
