--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@commercelayer/cli-plugin-checkout",
   "description": "Commerce Layer CLI Checkout plugin",
-  "version": "1.1.3",
+  "version": "1.1.5",
   "author": "Pierluigi Viti <pierluigi@commercelayer.io>",
   "bin": {
     "cl-checkout": "./bin/run"
@@ -64,10 +64,9 @@
   "scripts": {
     "postpack": "rm -f oclif.manifest.json",
     "posttest": "eslint . --ext .ts --config .eslintrc",
-    "prepack": "rm -rf lib && tsc -b && oclif-dev manifest && npm run version",
+    "prepack": "rm -rf lib && tsc -b && oclif-dev manifest && npm run readme",
     "test": "nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\"",
-    "version": "oclif-dev readme && git add README.md",
-    "readme": "oclif-dev readme"
+    "readme": "oclif-dev readme --plugin  && git add README.md"
   },
   "types": "lib/index.d.ts",
   "dependencies": {
