--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@commercelayer/cli-plugin-checkout",
   "description": "Commerce Layer CLI Checkout plugin",
-  "version": "1.1.5",
+  "version": "1.2.2",
   "author": "Pierluigi Viti <pierluigi@commercelayer.io>",
   "bin": {
     "cl-checkout": "./bin/run"
@@ -15,7 +15,6 @@
     "@types/jsonwebtoken": "^8.5.5",
     "@types/mocha": "^5.2.7",
     "@types/node": "^10.17.60",
-    "@types/update-notifier": "^5.0.0",
     "chai": "^4.3.4",
     "eslint": "^5.16.0",
     "eslint-config-oclif": "^3.1.0",
@@ -70,15 +69,14 @@
   },
   "types": "lib/index.d.ts",
   "dependencies": {
+    "@commercelayer/cli-core": "^0.0.1",
     "@commercelayer/js-auth": "^2.1.0",
     "@commercelayer/sdk": "2.3.0",
     "@oclif/command": "^1.8.0",
     "@oclif/config": "^1.17.0",
     "chalk": "^2.4.2",
     "cli-ux": "^5.6.3",
-    "jsonwebtoken": "^8.5.1",
-    "tslib": "^1.14.1",
-    "update-notifier": "^5.1.0"
+    "tslib": "^1.14.1"
   },
   "publishConfig": {
     "access": "public"
