--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
     "eslint": "^5.16.0",
     "eslint-config-oclif": "^3.1.0",
     "eslint-config-oclif-typescript": "^0.2.0",
+    "@typescript-eslint/eslint-plugin": "^2.6.1",
+    "@typescript-eslint/parser": "^2.6.1",
+    "eslint-config-xo-space": "^0.20.0",
+    "eslint-plugin-mocha": "^5.2.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-unicorn": "^6.0.1",
     "globby": "^10.0.2",
     "jsonapi-typescript": "^0.1.3",
     "mocha": "^5.2.0",
