--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@commercelayer/cli-plugin-checkout",
   "description": "Commerce Layer CLI Checkout plugin",
-  "version": "2.1.0",
+  "version": "3.0.1",
   "author": "Pierluigi Viti <pierluigi@commercelayer.io>",
   "bin": {
     "cl-checkout": "./bin/run"
@@ -9,9 +9,8 @@
   "bugs": "https://github.com/commercelayer/commercelayer-cli-plugin-checkout/issues",
   "devDependencies": {
     "@oclif/dev-cli": "git+https://github.com/pviti/dev-cli.git",
-    "@oclif/plugin-help": "^3.2.2",
-    "@oclif/test": "^1.2.8",
-    "@types/chai": "^4.2.21",
+    "@oclif/test": "^2.0.3",
+    "@types/chai": "^4.2.22",
     "@types/jsonwebtoken": "^8.5.5",
     "@types/mocha": "^5.2.7",
     "@types/node": "^16.11.0",
@@ -19,21 +18,14 @@
     "eslint": "^5.16.0",
     "eslint-config-oclif": "^3.1.0",
     "eslint-config-oclif-typescript": "^0.2.0",
-    "@typescript-eslint/eslint-plugin": "^2.6.1",
-    "@typescript-eslint/parser": "^2.6.1",
-    "eslint-config-xo-space": "^0.20.0",
-    "eslint-plugin-mocha": "^5.2.0",
-    "eslint-plugin-node": "^7.0.1",
-    "eslint-plugin-unicorn": "^6.0.1",
     "globby": "^10.0.2",
-    "jsonapi-typescript": "^0.1.3",
     "mocha": "^5.2.0",
     "nyc": "^14.1.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
   },
   "engines": {
-    "node": ">=12.20"
+    "node": ">=14"
   },
   "files": [
     "/bin",
@@ -63,7 +55,11 @@
         "hidden": true
       }
     },
-    "repositoryPrefix": "<%- repo %>/blob/main/<%- commandPath %>"
+    "repositoryPrefix": "<%- repo %>/blob/main/<%- commandPath %>",
+    "additionalHelpFlags": [
+      "-h"
+    ],
+    "topicSeparator": " "
   },
   "repository": "commercelayer/commercelayer-cli-plugin-checkout",
   "scripts": {
@@ -77,12 +73,11 @@
   "dependencies": {
     "@commercelayer/cli-core": "^1.0.0",
     "@commercelayer/js-auth": "^2.2.9",
-    "@commercelayer/sdk": "^3.3.0",
-    "@oclif/command": "^1.8.0",
-    "@oclif/config": "^1.17.0",
-    "chalk": "^2.4.2",
-    "cli-ux": "^5.6.3",
-    "tslib": "^1.14.1"
+    "@commercelayer/sdk": "^4.3.0",
+    "@oclif/core": "^1.1.2",
+    "chalk": "^4.1.2",
+    "cli-ux": "^6.0.8",
+    "tslib": "^2.3.1"
   },
   "publishConfig": {
     "access": "public"
