--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@commercelayer/cli-plugin-checkout",
   "description": "Commerce Layer CLI Checkout plugin",
-  "version": "3.0.2",
+  "version": "3.0.4",
   "author": "Pierluigi Viti <pierluigi@commercelayer.io>",
   "bugs": "https://github.com/commercelayer/commercelayer-cli-plugin-checkout/issues",
   "devDependencies": {
@@ -50,7 +50,7 @@
     "topics": {
       "checkout": {
         "description": "Generate checkout URLs",
-        "hidden": true
+        "hidden": false
       }
     },
     "repositoryPrefix": "<%- repo %>/blob/main/<%- commandPath %>",
