--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@commercelayer/cli-plugin-checkout",
   "description": "Commerce Layer CLI Checkout plugin",
-  "version": "3.1.1",
+  "version": "3.2.0",
   "author": "Pierluigi Viti <pierluigi@commercelayer.io>",
   "bugs": "https://github.com/commercelayer/commercelayer-cli-plugin-checkout/issues",
   "devDependencies": {
@@ -69,10 +69,11 @@
   },
   "types": "lib/index.d.ts",
   "dependencies": {
-    "@commercelayer/cli-core": "^1.3.6",
+    "@commercelayer/cli-core": "^1.3.13",
     "@commercelayer/js-auth": "^2.2.9",
     "@commercelayer/sdk": "^4.3.0",
-    "@oclif/core": "^1.3.0",
+    "@oclif/core": "^1.3.1",
+    "open": "^8.4.0",
     "tslib": "^2.3.1"
   },
   "publishConfig": {
