--- a/package.json
+++ b/package.json
@@ -1,25 +1,9 @@
 {
   "name": "@commercelayer/cli-plugin-checkout",
   "description": "Commerce Layer CLI Checkout plugin",
-  "version": "4.1.4",
+  "version": "4.1.5",
   "author": "Pierluigi Viti <pierluigi@commercelayer.io>",
   "bugs": "https://github.com/commercelayer/commercelayer-cli-plugin-checkout/issues",
-  "devDependencies": {
-    "@commercelayer/cli-dev": "^0.1.7",
-    "@oclif/plugin-help": "^5.1.11",
-    "@oclif/test": "^2.1.0",
-    "@types/chai": "^4.3.1",
-    "@types/mocha": "^9.1.1",
-    "@types/node": "^18.0.4",
-    "chai": "^4.3.6",
-    "eslint": "^5.16.0",
-    "eslint-config-oclif": "^3.1.0",
-    "eslint-config-oclif-typescript": "^0.2.0",
-    "mocha": "^9.2.1",
-    "nyc": "^15.1.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.7.4"
-  },
   "engines": {
     "node": ">=16"
   },
@@ -66,11 +50,27 @@
     "readme": "cl-cli-dev readme --plugin --bin=commercelayer && git add README.md"
   },
   "types": "lib/index.d.ts",
+  "devDependencies": {
+    "@commercelayer/cli-dev": "^0.1.10",
+    "@oclif/plugin-help": "^5.1.11",
+    "@oclif/test": "^2.1.1",
+    "@types/chai": "^4.3.3",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^18.7.15",
+    "chai": "^4.3.6",
+    "eslint": "^5.16.0",
+    "eslint-config-oclif": "^3.1.0",
+    "eslint-config-oclif-typescript": "^0.2.0",
+    "mocha": "^9.2.1",
+    "nyc": "^15.1.0",
+    "ts-node": "^10.9.1",
+    "typescript": "4.7.4"
+  },
   "dependencies": {
-    "@commercelayer/cli-core": "^1.3.15",
+    "@commercelayer/cli-core": "^1.6.1",
     "@commercelayer/js-auth": "^2.2.9",
-    "@commercelayer/sdk": "^4.15.0",
-    "@oclif/core": "^1.9.9",
+    "@commercelayer/sdk": "^4.15.1",
+    "@oclif/core": "^1.16.0",
     "open": "^8.4.0",
     "tslib": "^2.4.0"
   },
