--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,8 @@
     "no-multiple-empty-lines": "off",
     "array-bracket-spacing": "off",
     "@typescript-eslint/no-use-before-define": "off",
-    "no-multi-assign": "off"
+    "no-multi-assign": "off",
+    "camelcase": "off",
+    "unicorn/no-array-for-each": "warn"
   }
 }
