--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@commercelayer/cli-plugin-checkout",
   "description": "Commerce Layer CLI Checkout plugin",
-  "version": "4.4.2",
+  "version": "4.5.0",
   "author": "Pierluigi Viti <pierluigi@commercelayer.io>",
   "bugs": "https://github.com/commercelayer/commercelayer-cli-plugin-checkout/issues",
   "engines": {
-    "node": ">=16"
+    "node": "^16.13.0 || >=18.0.0"
   },
   "files": [
     "/bin",
