--- a/package.json
+++ b/package.json
@@ -57,13 +57,17 @@
     "@commercelayer/eslint-config-ts": "^1.2.0",
     "@oclif/plugin-help": "^5.2.20",
     "@oclif/test": "^2.5.6",
-    "@types/chai": "^4.3.10",
-    "@types/mocha": "^10.0.4",
-    "@types/node": "^20.9.2",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@types/chai": "^4.3.11",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^20.9.4",
     "chai": "^4.3.10",
     "eslint": "^8.54.0",
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
+    "oclif": "^4.0.4",
+    "semantic-release": "^22.0.8",
     "ts-node": "^10.9.1",
     "typescript": "5.2.2"
   },
