--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "repository": "commercelayer/commercelayer-cli-plugin-checkout",
   "bugs": "https://github.com/commercelayer/commercelayer-cli-plugin-checkout/issues",
   "engines": {
-    "node": ">=20.10.0"
+    "node": ">=20"
   },
   "files": [
     "/bin/run.*",
@@ -56,25 +56,25 @@
     "@commercelayer/cli-dev": "beta",
     "@commercelayer/eslint-config-ts": "^1.4.5",
     "@oclif/plugin-help": "^6.0.20",
-    "@oclif/test": "^3.2.8",
+    "@oclif/test": "^3.2.9",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@types/chai": "^4.3.14",
     "@types/mocha": "^10.0.6",
-    "@types/node": "^20.12.5",
+    "@types/node": "^20.12.7",
     "chai": "^4.4.1",
     "eslint": "^8.57.0",
     "mocha": "^10.4.0",
     "nyc": "^15.1.0",
-    "oclif": "^4.7.7",
-    "semantic-release": "^23.0.7",
+    "oclif": "^4.8.0",
+    "semantic-release": "^23.0.8",
     "ts-node": "^10.9.2",
     "typescript": "5.3.3"
   },
   "dependencies": {
     "@commercelayer/cli-core": "beta",
-    "@commercelayer/sdk": "^5.36.0",
-    "@oclif/core": "^3.26.0",
+    "@commercelayer/sdk": "sdk6",
+    "@oclif/core": "^3.26.2",
     "open": "^8.4.2",
     "tslib": "^2.6.2"
   },
