--- a/package.json
+++ b/package.json
@@ -55,26 +55,26 @@
   "devDependencies": {
     "@commercelayer/cli-dev": "^3.0.5",
     "@commercelayer/eslint-config-ts": "^1.4.5",
-    "@oclif/plugin-help": "^6.2.3",
-    "@oclif/test": "^3.2.15",
+    "@oclif/plugin-help": "^6.2.8",
+    "@oclif/test": "^4.0.8",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
-    "@types/chai": "^4.3.16",
-    "@types/mocha": "^10.0.6",
-    "@types/node": "^20.14.5",
-    "chai": "^4.4.1",
+    "@types/chai": "^4.3.17",
+    "@types/mocha": "^10.0.7",
+    "@types/node": "^22.4.1",
+    "chai": "^4.5.0",
     "eslint": "^8.57.0",
-    "mocha": "^10.4.0",
+    "mocha": "^10.7.3",
     "nyc": "^15.1.0",
-    "oclif": "^4.13.8",
-    "semantic-release": "^23.1.1",
-    "tsx": "^4.15.6",
+    "oclif": "^4.14.22",
+    "semantic-release": "^24.1.0",
+    "tsx": "^4.17.0",
     "typescript": "5.3.3"
   },
   "dependencies": {
-    "@commercelayer/cli-core": "^5.0.5",
-    "@commercelayer/sdk": "^6.8.0",
-    "@oclif/core": "^3.27.0",
+    "@commercelayer/cli-core": "beta",
+    "@commercelayer/sdk": "^6.13.0",
+    "@oclif/core": "^4.0.17",
     "open": "^8.4.2",
     "tslib": "^2.6.3"
   },
